chore: expand .gitignore to cover all projects and build outputs

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# .NET Core
-bin/
-obj/
+# ==== .NET Core (all projects) ====
+**/bin/
+**/obj/
 *.user
 *.suo
 *.DotSettings.user
 
-# Visual Studio Code
+# ==== Solution-level files ====
+*.sln.DotSettings
+
+# ==== Visual Studio Code ====
 .vscode/
 
-# Node.js
-node_modules/
-dist/
-build/
+# ==== Node.js / Vite front-end ====
+frontend/dvld-frontend/node_modules/
+frontend/dvld-frontend/dist/
+frontend/dvld-frontend/build/
+frontend/dvld-frontend/output.css
+frontend/dvld-frontend/.env
 
-# Logs
+# ==== Logs ====
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Docker
+# ==== Docker ====
 docker-compose.override.yml
+
+# ==== Misc editors ====
+*.swp
+*~
 
